--- a/小二承兑平台4/index.html
+++ b/小二承兑平台4/index.html
@@ -40,14 +40,14 @@
         </div>
         <div class="banner_text2"><span></span>目前已支持交易平台<span></span></div>
         <div class="banner_list">
-            <a href="">xbrick.io</a>
-            <a href="">aex.com</a>
-            <a href="">big.one</a>
-            <a href="">zb.com</a>
-            <a href="">cointiger.com</a>
-            <a href="">coinbene</a>
-            <a href="">u.cx</a>
-            <a href="">kkcoin.com</a>
+            <a target="_blank" href="https://xbrick.io/r.html?p=5a7024f734525d21401070ff">xbrick.io</a>
+            <a target="_blank" href="https://www.aex.com/">aex.com</a>
+            <a target="_blank" href="https://big.one/">big.one</a>
+            <a target="_blank" href="https://vip.zb.com/activity/joinbtc?tuijianid=22e35f050f9371cfb712ec73bb6f76e6">zb.com</a>
+            <a target="_blank" href="https://www.cointiger.com/exchange/index.html">cointiger.com</a>
+            <a target="_blank" href="http://www.coinbene.com/channel/#/?id=675709">coinbene</a>
+            <a target="_blank" href="http://u.cx/">u.cx</a>
+            <a target="_blank" href="https://list.kkcoin.com/coin/teleinvite?t=k73fc9s9kpmnrfht">kkcoin.com</a>
         </div>
     </div>
     <div class="marquee">
@@ -62,9 +62,9 @@
 <div class="title1"><span></span>小二承兑认证商家<span></span></div>
 <div class="list flex container">
     <div class="li">
-        <div class="name">二哥速兑</div>
+        <div class="name">小二极速快兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="recharge" style="margin-top: 34px">安全可靠，承兑首选</p>
+        <p class="recharge" style="margin-top: 34px">诚信快捷，网银打款秒到</p>
         <div class="way">
             <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=1724429306&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
@@ -79,14 +79,93 @@
             <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
             <img src="imgs/code.png" alt="" class="code">
             <p id='pc'>微信扫码，快捷沟通</p>
+            <div id="move" class="button"><a href="imgs/code.png">点击下载二维码</a></div>
+        </div>
+    </div>
+    <div class="li">
+        <div class="name">二哥速兑</div>
+        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
+        <p class="recharge" style="margin-top: 34px">安全可靠，承兑首选</p>
+        <div class="way">
+            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=3322794536&site=qq&menu=yes">
+                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                <span>QQ交谈</span>
+            </a>
+         <!--    <div class="qq wx">
+                <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
+                <span>微信交谈</span>
+            </div> -->
+        </div>
+        <div class="shadow">
+            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+            <img src="imgs/code.png" alt="" class="code">
+            <p id='pc'>微信扫码，快捷沟通</p>
             <div id="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
         </div>
     </div>
-    <div class="li">2</div>
-    <div class="li">3</div>
-    <div class="li">4</div>
-    <div class="li">4</div>
-    <div class="li">4</div>
+    <div class="li">
+        <div class="name">小美承兑</div>
+        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
+        <p class="recharge" style="margin-top: 34px">快速稳定，专业兑换</p>
+        <div class="way">
+            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=1640602486&site=qq&menu=yes">
+                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                <span>QQ交谈</span>
+            </a>
+        <!--     <div class="qq wx">
+                <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
+                <span>微信交谈</span>
+            </div> -->
+        </div>
+        <div class="shadow">
+            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+            <img src="imgs/code.png" alt="" class="code">
+            <p id='pc'>微信扫码，快捷沟通</p>
+            <div id="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+        </div>
+    </div>
+    <div class="li">
+        <div class="name">波波快兑</div>
+        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
+        <p class="recharge" style="margin-top: 34px">随时随地，极速到账</p>
+        <div class="way">
+            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=2440187242&site=qq&menu=yes">
+                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                <span>QQ交谈</span>
+            </a>
+          <!--   <div class="qq wx">
+                <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
+                <span>微信交谈</span>
+            </div> -->
+        </div>
+        <div class="shadow">
+            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+            <img src="imgs/code.png" alt="" class="code">
+            <p id='pc'>微信扫码，快捷沟通</p>
+            <div id="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+        </div>
+    </div>
+    <div class="li">
+        <div class="name">多财秒兑</div>
+        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
+        <p class="recharge" style="margin-top: 34px">诚信高效，竭诚为您服务</p>
+        <div class="way">
+            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=2493130937&site=qq&menu=yes">
+                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                <span>QQ交谈</span>
+            </a>
+         <!--    <div class="qq wx">
+                <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
+                <span>微信交谈</span>
+            </div> -->
+        </div>
+        <div class="shadow">
+            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+            <img src="imgs/code.png" alt="" class="code">
+            <p id='pc'>微信扫码，快捷沟通</p>
+            <div id="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+        </div>
+    </div>
 </div>
 <div class="diss">
     <p>温馨提示：本平台不收取任何费用，承兑商会收取一定兑换手续费。该费率根据市场供需可能上浮或下调，各承兑商有所不同，具体请咨询承兑商。</p>
@@ -109,10 +188,10 @@
     isPc();
     function isPc(){
         if(/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
-            console.log('move')
+            // console.log('move')
             $('#pc').hide()
         } else {
-            console.log('pc')
+            // console.log('pc')
             $('#move').hide()
         }
     }
