--- a/小二承兑平台4/index.html
+++ b/小二承兑平台4/index.html
@@ -25,15 +25,15 @@
     </div>
     <div class="banner">
         <img src="imgs/banner_title.png" alt="" class="banner_title">
-        <div class="banner_text">
-            旨在为用户提供可靠的币币交易兑换服务。用户可以方便快速地进行货币兑换，然后进入比特股的贸易世界，在内盘进行交易；同时平台也提供
+        <div class="banner_text" style="margin-top: 30px;">
+            旨在为用户提供可靠的币币交易兑换服务。用户可以方便快速地进行货币兑换，然后进入比特股的贸易世界，使用BitCNY或BitUSD在内盘进行交易；同时平台也提供
         </div>
         <div class="banner_text">
             高效、稳定、低费率的币资产兑出服务，保证1:1的数字货币储备。每一位承兑商都经过严格审核，值得信赖。
         </div>
         <img src="imgs/banner_logo.png" alt="" class="banner_logo">
         <div class="banner_text">BitCNY、BitUSD是比特股系统内与法币等价锚定的数字货币，</div>
-        <div class="banner_text">用户可以随时使用BitCNY/BitUSD和法币进行1:1兑换。</div>
+        <div class="banner_text">用户可以随时使用BitCNY/BitUSD和法币进行1:1兑换，方便快捷，无需担心价格波动，具有很强的便利性和实用性，对管制免疫。</div>
         <div class="banner_box">
             <p>1 BitCNY= 1 CNY</p>
             <p>1 BitUSD= 1 USD</p>
@@ -51,29 +51,30 @@
         </div>
     </div>
     <div class="marquee">
-        <div class="container flex" style="background-color: #FECE68;">
-         <!-- <span><img src="imgs/icon1.png" alt="" style="width: 12px;height:12px;"></span> -->
-         <marquee behaviro="alternate">
-            <p>     
-            小二承兑服务，为用户提供可靠的币币交易兑换服务，专业提供:BitCNY/BitUSD和法币的互相兑换。</p>
-        </marquee>
-    </div> 
-</div>
-<div class="title1"><span></span>小二承兑认证商家<span></span></div>
-<div class="list flex container">
-    <div class="li">
-        <div class="name">小二极速快兑</div>
-        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="recharge" style="margin-top: 34px">诚信快捷，网银打款秒到</p>
-        <div class="way">
-            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=1724429306&site=qq&menu=yes">
-                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
-                <span>QQ交谈</span>
-            </a>
-            <div class="qq wx">
+        <div class="container flex" style="background-color: #FFFAE9;max-width: 900px;padding-left: 20px">
+            <span><img src="imgs/icon1.png" alt="" style="width: 16px;height:16px;"></span>
+            <marquee behaviro="alternate">
+                <p>
+                本平台严格审核承兑商进驻标准，每一位承兑商都经过精挑细选，对本行业有一定的专业认知且从业时间长、操作熟练，可为您提供：BitCNY/BitUSD和法币的互相兑换，方便、快捷、到位！</p>
+            </marquee>
+        </div> 
+    </div>
+    <div class="title1"><span></span>小二承兑认证商家<span></span></div>
+    <div class="list flex container">
+        <div class="li">
+            <div class="name">小二极速快兑</div>
+            <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
+            <p class="number">笔数：<span>128笔</span>  好评：<span>98%</span></p>
+            <p class="recharge" style="margin-top: 34px">诚信快捷，网银打款秒到</p>
+            <div class="way">
+                <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=1724429306&site=qq&menu=yes">
+                    <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                    <span>QQ交谈</span>
+                </a>
+          <!--   <div class="qq wx">
                 <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
                 <span>微信交谈</span>
-            </div>
+            </div> -->
         </div>
         <div class="shadow">
             <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
@@ -85,6 +86,7 @@
     <div class="li">
         <div class="name">二哥速兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
+        <p class="number">笔数：<span>68笔</span>  好评：<span>99%</span></p>
         <p class="recharge" style="margin-top: 34px">安全可靠，承兑首选</p>
         <div class="way">
             <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=3322794536&site=qq&menu=yes">
@@ -106,6 +108,7 @@
     <div class="li">
         <div class="name">小美承兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
+        <p class="number">笔数：<span>40笔</span>  好评：<span>97%</span></p>
         <p class="recharge" style="margin-top: 34px">快速稳定，专业兑换</p>
         <div class="way">
             <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=1640602486&site=qq&menu=yes">
@@ -127,6 +130,7 @@
     <div class="li">
         <div class="name">波波快兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
+        <p class="number">笔数：<span>22笔</span>  好评：<span>97%</span></p>
         <p class="recharge" style="margin-top: 34px">随时随地，极速到账</p>
         <div class="way">
             <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=2440187242&site=qq&menu=yes">
@@ -148,9 +152,32 @@
     <div class="li">
         <div class="name">多财秒兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
+        <p class="number">笔数：<span>82笔</span>  好评：<span>96%</span></p>
         <p class="recharge" style="margin-top: 34px">诚信高效，竭诚为您服务</p>
         <div class="way">
             <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=2493130937&site=qq&menu=yes">
+                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                <span>QQ交谈</span>
+            </a>
+         <!--    <div class="qq wx">
+                <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
+                <span>微信交谈</span>
+            </div> -->
+        </div>
+        <div class="shadow">
+            <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
+            <img src="imgs/code.png" alt="" class="code">
+            <p id='pc'>微信扫码，快捷沟通</p>
+            <div id="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+        </div>
+    </div>
+    <div class="li">
+        <div class="name">币多多</div>
+        <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
+        <p class="number">笔数：<span>42笔</span>  好评：<span>98%</span></p>
+        <p class="recharge" style="margin-top: 34px">专业承兑，值得信赖</p>
+        <div class="way">
+            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=3109806311&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
@@ -182,18 +209,16 @@
     })
     $('.close').each(function(i,e){
         $(this).click(function(){
-           $('.shadow').eq(i).hide()
-       })
+         $('.shadow').eq(i).hide()
+     })
     })
-    isPc();
-    function isPc(){
-        if(/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
-            // console.log('move')
-            $('#pc').hide()
-        } else {
-            // console.log('pc')
-            $('#move').hide()
-        }
-    }
+    // isPc();
+    // function isPc(){
+    //     if(/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
+    //         $('#pc').hide()
+    //     } else {
+    //         $('#move').hide()
+    //     }
+    // }
 </script>
 </html>
