--- a/小二承兑平台4/index.html
+++ b/小二承兑平台4/index.html
@@ -33,7 +33,7 @@
         </div>
         <img src="imgs/banner_logo.png" alt="" class="banner_logo">
         <div class="banner_text">BitCNY、BitUSD是比特股系统内与法币等价锚定的数字货币，</div>
-        <div class="banner_text">用户可以随时使用BitCNY/BitUSD和法币进行1:1兑换，方便快捷，无需担心价格波动，具有很强的便利性和实用性，对管制免疫。</div>
+        <div class="banner_text">用户可以随时使用BitCNY/BitUSD和法币进行1:1兑换，无需担心价格波动，具有很强的便利性和实用性，对管制免疫。</div>
         <div class="banner_box">
             <p>1 BitCNY= 1 CNY</p>
             <p>1 BitUSD= 1 USD</p>
