--- a/小二承兑平台4/index.html
+++ b/小二承兑平台4/index.html
@@ -28,11 +28,12 @@
         <div class="banner_text" style="margin-top: 30px;">
             旨在为用户提供可靠的币币交易兑换服务。用户可以方便快速地进行货币兑换，然后进入比特股的贸易世界，使用BitCNY或BitUSD在内盘进行交易；同时平台也提供
         </div>
+        <!-- <div style="height: 10px;" class="line10"></div> -->
         <div class="banner_text">
             高效、稳定、低费率的币资产兑出服务，保证1:1的数字货币储备。每一位承兑商都经过严格审核，值得信赖。
         </div>
         <img src="imgs/banner_logo.png" alt="" class="banner_logo">
-        <div class="banner_text">BitCNY、BitUSD是比特股系统内与法币等价锚定的数字货币，</div>
+        <div class="banner_text" style="margin-top: 10px;">BitCNY、BitUSD是比特股系统内与法币等价锚定的数字货币，</div>
         <div class="banner_text">用户可以随时使用BitCNY/BitUSD和法币进行1:1兑换，无需担心价格波动，具有很强的便利性和实用性，对管制免疫。</div>
         <div class="banner_box">
             <p>1 BitCNY= 1 CNY</p>
@@ -62,10 +63,10 @@
     <div class="title1"><span></span>小二承兑认证商家<span></span></div>
     <div class="list flex container">
         <div class="li">
-            <div class="name">小二极速快兑</div>
-            <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-            <p class="number">笔数：<span>128笔</span>  好评：<span>98%</span></p>
-            <p class="recharge" style="margin-top: 34px">诚信快捷，网银打款秒到</p>
+            <div class="name">小二极速快兑</div> 
+            <p class="recharge">充值：<span>0.5%</span>   提现：<span>0.5%</span></p>
+            <p class="number">笔数：<span>128笔</span>   好评：<span>98%</span></p>
+            <p class="recharge" style="margin-top: 20px">诚信快捷，网银打款秒到</p>
             <div class="way">
                 <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=1724429306&site=qq&menu=yes">
                     <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
@@ -87,7 +88,7 @@
         <div class="name">二哥速兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
         <p class="number">笔数：<span>68笔</span>  好评：<span>99%</span></p>
-        <p class="recharge" style="margin-top: 34px">安全可靠，承兑首选</p>
+        <p class="recharge" style="margin-top: 20px">安全可靠，承兑首选</p>
         <div class="way">
             <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=3322794536&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
@@ -109,7 +110,7 @@
         <div class="name">小美承兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
         <p class="number">笔数：<span>40笔</span>  好评：<span>97%</span></p>
-        <p class="recharge" style="margin-top: 34px">快速稳定，专业兑换</p>
+        <p class="recharge" style="margin-top: 20px">快速稳定，专业兑换</p>
         <div class="way">
             <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=1640602486&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
@@ -131,7 +132,7 @@
         <div class="name">波波快兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
         <p class="number">笔数：<span>22笔</span>  好评：<span>97%</span></p>
-        <p class="recharge" style="margin-top: 34px">随时随地，极速到账</p>
+        <p class="recharge" style="margin-top: 20px">随时随地，极速到账</p>
         <div class="way">
             <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=2440187242&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
@@ -153,7 +154,7 @@
         <div class="name">多财秒兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
         <p class="number">笔数：<span>82笔</span>  好评：<span>96%</span></p>
-        <p class="recharge" style="margin-top: 34px">诚信高效，竭诚为您服务</p>
+        <p class="recharge" style="margin-top: 20px">诚信高效，竭诚为您服务</p>
         <div class="way">
             <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=2493130937&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
@@ -175,7 +176,7 @@
         <div class="name">币多多</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
         <p class="number">笔数：<span>42笔</span>  好评：<span>98%</span></p>
-        <p class="recharge" style="margin-top: 34px">专业承兑，值得信赖</p>
+        <p class="recharge" style="margin-top: 20px">专业承兑，值得信赖</p>
         <div class="way">
             <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=3109806311&site=qq&menu=yes">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
