--- a/小二承兑平台4/help.html
+++ b/小二承兑平台4/help.html
@@ -107,7 +107,7 @@
 </div>
 </div>
 <div class="footer" style="margin-top: 40px;">
-    Copyright 2010-2020 小二承兑中心 All Rights Reserved
+    Copyright ©2018 小二承兑中心 All Rights Reserved
 </div>
 <script>
     $('.title').each(function(i,e){
