--- a/小二承兑平台4/index.html
+++ b/小二承兑平台4/index.html
@@ -26,15 +26,10 @@
     <div class="banner">
         <img src="imgs/banner_title.png" alt="" class="banner_title">
         <div class="banner_text" style="margin-top: 30px;">
-            旨在为用户提供可靠的币币交易兑换服务。用户可以方便快速地进行货币兑换，然后进入比特股的贸易世界，使用BitCNY或BitUSD在内盘进行交易；同时平台也提供
-        </div>
-        <!-- <div style="height: 10px;" class="line10"></div> -->
-        <div class="banner_text">
-            高效、稳定、低费率的币资产兑出服务，保证1:1的数字货币储备。每一位承兑商都经过严格审核，值得信赖。
+            旨在为用户提供可靠的币币交易兑换服务。用户可以通过承兑商快速进行货币兑换，把人民币或美元兑换成BitCNY或BitUSD，然后进入比特股内盘进行交易。同时平台也提供高效、稳定、低费率的数字资产兑出服务，保证1:1的数字货币储备。每一位承兑商都经过严格审核，值得信赖，无需担心承兑风险。
         </div>
         <img src="imgs/banner_logo.png" alt="" class="banner_logo">
-        <div class="banner_text" style="margin-top: 10px;">BitCNY、BitUSD是比特股系统内与法币等价锚定的数字货币，</div>
-        <div class="banner_text">用户可以随时使用BitCNY/BitUSD和法币进行1:1兑换，无需担心价格波动，具有很强的便利性和实用性，对管制免疫。</div>
+        <div class="banner_text" style="margin-top: 10px;">目前因交易所无法进行法币充值服务，出现了类似USDT的代币，而BitCNY、BitUSD是比特股系统内与法币等价锚定的数字货币，用户可以随时使用BitCNY或BitUSD和法币进行1:1兑换，价格稳定，不受市场波动影响，具有很强的便利性和实用性。</div>
         <div class="banner_box">
             <p>1 BitCNY= 1 CNY</p>
             <p>1 BitUSD= 1 USD</p>
@@ -46,7 +41,7 @@
             <a target="_blank" href="https://big.one/">big.one</a>
             <a target="_blank" href="https://vip.zb.com/activity/joinbtc?tuijianid=22e35f050f9371cfb712ec73bb6f76e6">zb.com</a>
             <a target="_blank" href="https://www.cointiger.com/exchange/index.html">cointiger.com</a>
-            <a target="_blank" href="http://www.coinbene.com/channel/#/?id=675709">coinbene</a>
+            <a target="_blank" href="http://www.coinbene.com/channel/#/?id=675709">coinbene.com</a>
             <a target="_blank" href="http://u.cx/">u.cx</a>
             <a target="_blank" href="https://list.kkcoin.com/coin/teleinvite?t=k73fc9s9kpmnrfht">kkcoin.com</a>
         </div>
@@ -65,10 +60,14 @@
         <div class="li">
             <div class="name">小二极速快兑</div> 
             <p class="recharge">充值：<span>0.5%</span>   提现：<span>0.5%</span></p>
-            <p class="number">笔数：<span>79笔</span>   好评：<span>98%</span></p>
+            <p class="number">笔数：<span>79笔</span>   好评：<span>98.6%</span></p>
             <p class="recharge" style="margin-top: 20px">诚信快捷，网银打款秒到</p>
             <div class="way">
-                <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=1724429306&site=qq&menu=yes">
+                <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=1724429306&site=qq&menu=yes">
+                    <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                    <span>QQ交谈</span>
+                </a>
+                <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=1724429306&version=1&src_type=web&web_src=oicqzone.com">
                     <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                     <span>QQ交谈</span>
                 </a>
@@ -80,17 +79,21 @@
         <div class="shadow">
             <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
             <img src="imgs/code.png" alt="" class="code">
-            <p id='pc'>微信扫码，快捷沟通</p>
-            <div id="move" class="button"><a href="imgs/code.png">点击下载二维码</a></div>
+            <p class='pc'>微信扫码，快捷沟通</p>
+            <div class="move" class="button"><a href="imgs/code.png">点击下载二维码</a></div>
         </div>
     </div>
     <div class="li">
         <div class="name">二哥速兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>68笔</span>  好评：<span>99%</span></p>
+        <p class="number">笔数：<span>68笔</span>  好评：<span>99.1%</span></p>
         <p class="recharge" style="margin-top: 20px">安全可靠，承兑首选</p>
         <div class="way">
-            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=3322794536&site=qq&menu=yes">
+            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=3322794536&site=qq&menu=yes">
+                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                <span>QQ交谈</span>
+            </a>
+            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=3322794536&version=1&src_type=web&web_src=oicqzone.com">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
@@ -102,17 +105,21 @@
         <div class="shadow">
             <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
             <img src="imgs/code.png" alt="" class="code">
-            <p id='pc'>微信扫码，快捷沟通</p>
-            <div id="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            <p class='pc'>微信扫码，快捷沟通</p>
+            <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
         </div>
     </div>
     <div class="li">
         <div class="name">小美承兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>40笔</span>  好评：<span>97%</span></p>
+        <p class="number">笔数：<span>40笔</span>  好评：<span>97.5%</span></p>
         <p class="recharge" style="margin-top: 20px">快速稳定，专业兑换</p>
         <div class="way">
-            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=1640602486&site=qq&menu=yes">
+            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=1640602486&site=qq&menu=yes">
+                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                <span>QQ交谈</span>
+            </a>
+            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=1640602486&version=1&src_type=web&web_src=oicqzone.com">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
@@ -124,17 +131,21 @@
         <div class="shadow">
             <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
             <img src="imgs/code.png" alt="" class="code">
-            <p id='pc'>微信扫码，快捷沟通</p>
-            <div id="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            <p class='pc'>微信扫码，快捷沟通</p>
+            <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
         </div>
     </div>
     <div class="li">
         <div class="name">波波快兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>22笔</span>  好评：<span>97%</span></p>
+        <p class="number">笔数：<span>22笔</span>  好评：<span>95.9%</span></p>
         <p class="recharge" style="margin-top: 20px">随时随地，极速到账</p>
         <div class="way">
-            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=2440187242&site=qq&menu=yes">
+            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=2440187242&site=qq&menu=yes">
+                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                <span>QQ交谈</span>
+            </a>
+            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=2440187242&version=1&src_type=web&web_src=oicqzone.com">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
@@ -146,17 +157,21 @@
         <div class="shadow">
             <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
             <img src="imgs/code.png" alt="" class="code">
-            <p id='pc'>微信扫码，快捷沟通</p>
-            <div id="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            <p class='pc'>微信扫码，快捷沟通</p>
+            <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
         </div>
     </div>
     <div class="li">
         <div class="name">多财秒兑</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>82笔</span>  好评：<span>96%</span></p>
+        <p class="number">笔数：<span>82笔</span>  好评：<span>96.6%</span></p>
         <p class="recharge" style="margin-top: 20px">诚信高效，竭诚为您服务</p>
         <div class="way">
-            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=2493130937&site=qq&menu=yes">
+            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=2493130937&site=qq&menu=yes">
+                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                <span>QQ交谈</span>
+            </a>
+            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=2493130937&version=1&src_type=web&web_src=oicqzone.com">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
@@ -168,17 +183,21 @@
         <div class="shadow">
             <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
             <img src="imgs/code.png" alt="" class="code">
-            <p id='pc'>微信扫码，快捷沟通</p>
-            <div id="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            <p class='pc'>微信扫码，快捷沟通</p>
+            <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
         </div>
     </div>
     <div class="li">
         <div class="name">币多多</div>
         <p class="recharge">充值：<span>0.5%</span>  提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>42笔</span>  好评：<span>98%</span></p>
+        <p class="number">笔数：<span>42笔</span>  好评：<span>98.9%</span></p>
         <p class="recharge" style="margin-top: 20px">专业承兑，值得信赖</p>
         <div class="way">
-            <a target="_blank" class="qq" href="http://wpa.qq.com/msgrd?v=3&uin=3109806311&site=qq&menu=yes">
+            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=3109806311&site=qq&menu=yes">
+                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                <span>QQ交谈</span>
+            </a>
+            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=3109806311&version=1&src_type=web&web_src=oicqzone.com">
                 <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
                 <span>QQ交谈</span>
             </a>
@@ -190,8 +209,8 @@
         <div class="shadow">
             <p style="text-align: right;"><img src="imgs/x.png" alt="" class="close"></p>
             <img src="imgs/code.png" alt="" class="code">
-            <p id='pc'>微信扫码，快捷沟通</p>
-            <div id="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
+            <p class='pc'>微信扫码，快捷沟通</p>
+            <div class="move" class="button"><a href="imgs/code.png">点击下载图片</a></div>
         </div>
     </div>
 </div>
@@ -199,7 +218,7 @@
     <p>温馨提示：本平台不收取任何费用，承兑商会收取一定兑换手续费。该费率根据市场供需可能上浮或下调，各承兑商有所不同，具体请咨询承兑商。</p>
 </div>
 <div class="footer">
-    Copyright 2010-2020 小二承兑中心 All Rights Reserved
+    Copyright ©2018 小二承兑中心 All Rights Reserved
 </div>
 </body>
 <script>
@@ -210,16 +229,16 @@
     })
     $('.close').each(function(i,e){
         $(this).click(function(){
-         $('.shadow').eq(i).hide()
-     })
+           $('.shadow').eq(i).hide()
+       })
     })
-    // isPc();
-    // function isPc(){
-    //     if(/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
-    //         $('#pc').hide()
-    //     } else {
-    //         $('#move').hide()
-    //     }
-    // }
+    isPc();
+    function isPc(){
+        if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent) || /(Android)/i.test(navigator.userAgent)) {
+            $('.pc').hide()
+        } else {
+            $('.move').hide()
+        }
+    }
 </script>
 </html>
