--- a/小二承兑平台4/index.html
+++ b/小二承兑平台4/index.html
@@ -26,7 +26,7 @@
     <div class="banner">
         <img src="imgs/banner_title.png" alt="" class="banner_title">
         <div class="banner_text" style="margin-top: 20px;">
-         旨在为用户提供可靠的币币交易兑换服务。用户可以通过承兑商快速进行货币兑换，用人民币或美元充值，兑换成BitCNY或BitUSD，然后在交易所内进行数字资产交易；同时又可以进行提现，将数字货币兑出，换回人民币或美元。平台提供高效、稳定、低费率的数字资产兑换服务，严格遵守1:1的准备金保障机制。
+        旨在为用户提供可靠的币币交易兑换服务。用户可通过承兑商快速进行货币兑换：①充值：以人民币充值BitCNY，兑换成功后即可在交易所内进行币币交易；②提现：将数字货币兑出，对BitCNY进行提现，换回人民币。平台提供高效、稳定、低费率的数字资产兑换服务，严格遵守1:1的准备金保障机制。
      </div>
      <img src="imgs/banner_logo.png" alt="" class="banner_logo">
      <div class="banner_text" style="margin-top: 10px;">目前因交易所无法进行法币充值服务，出现了类似USDT的代币，而BitCNY、BitUSD是比特股系统内与法币等价锚定的数字货币，用户可以随时使用BitCNY或BitUSD和法币进行1:1兑换，价格稳定，不受市场波动影响，具有很强的便利性和实用性。</div>
