--- a/小二承兑平台4/index.html
+++ b/小二承兑平台4/index.html
@@ -25,51 +25,55 @@
     </div>
     <div class="banner">
         <img src="imgs/banner_title.png" alt="" class="banner_title">
-        <div class="banner_text" style="margin-top: 20px;">
-        旨在为用户提供可靠的币币交易兑换服务。用户可通过承兑商快速进行货币兑换：①充值：以人民币充值BitCNY，兑换成功后即可在交易所内进行币币交易；②提现：将数字货币兑出，对BitCNY进行提现，换回人民币。平台提供高效、稳定、低费率的数字资产兑换服务，严格遵守1:1的准备金保障机制。
-     </div>
-     <img src="imgs/banner_logo.png" alt="" class="banner_logo">
-     <div class="banner_text" style="margin-top: 10px;">目前因交易所无法进行法币充值服务，出现了类似USDT的代币，而BitCNY、BitUSD是比特股系统内与法币等价锚定的数字货币，用户可以随时使用BitCNY或BitUSD和法币进行1:1兑换，价格稳定，不受市场波动影响，具有很强的便利性和实用性。</div>
-     <div class="banner_box">
-        <p>1 BitCNY = 1 CNY</p>
-        <p>1 BitUSD = 1 USD</p>
-    </div>
-    <div class="banner_text2"><span></span>目前已支持交易平台<span></span></div>
-    <div class="banner_list">
-        <a target="_blank" href="https://www.cointiger.com/exchange/index.html">cointiger.com</a>
-        <a target="_blank" href="https://xbrick.io/r.html?p=5a7024f734525d21401070ff">xbrick.io</a>
-        <a target="_blank" href="https://www.aex.com/">aex.com</a>
-        <a target="_blank" href="https://vip.zb.com/activity/joinbtc?tuijianid=22e35f050f9371cfb712ec73bb6f76e6">zb.com</a>
-        <a target="_blank" href="http://www.coinbene.com/channel/#/?id=675709">coinbene.com</a>
-        <a target="_blank" href="https://list.kkcoin.com/coin/teleinvite?t=k73fc9s9kpmnrfht">kkcoin.com</a>   
-        <a target="_blank" href="https://big.one/">big.one</a>
-        <a target="_blank" href="http://u.cx/">u.cx</a>
+        <div class="banner_text" style="margin-top: 10px;font-size: 14px">
+            <span></span>
+            旨在为用户提供可靠的币币交易兑换服务
+            <span></span>
+        </div>
+        <div class="banner_text" style="margin-top: 10px;">目前交易所无法进行法币充值服务，而BitCNY、BitUSD是比特股系统内与法币等价锚定的数字货币，用户可以随时使用BitCNY或BitUSD和法币进行1:1兑换，价格稳定，不受市场波动影响，具有很强的便利性和实用性。</div>
+        <div class="banner_box">
+            <p>1 BitCNY = 1 CNY</p>
+            <p>1 BitUSD = 1 USD</p>
+        </div>
+        <div class="banner_text">充值：将法币和交易所账户ID给到承兑商，承兑商便把BitCNY/BitUSD充入交易所，即可在交易所内进行币币交易</div>
+        <div class="banner_text">提现：将BitCNY/BitUSD转入承兑商指定地址，即可换回法币</div>
+        <img src="imgs/banner_logo1.png" alt="" class="banner_logo">
+        <div class="banner_text2"><span></span>目前已支持交易平台<span></span></div>
+        <div class="banner_list">
+            <a target="_blank" href="https://www.cointiger.com/exchange/index.html">cointiger.com</a>
+            <a target="_blank" href="https://xbrick.io/r.html?p=5a7024f734525d21401070ff">xbrick.io</a>
+            <a target="_blank" href="https://www.aex.com/">aex.com</a>
+            <a target="_blank" href="https://vip.zb.com/activity/joinbtc?tuijianid=22e35f050f9371cfb712ec73bb6f76e6">zb.com</a>
+            <a target="_blank" href="http://www.coinbene.com/channel/#/?id=675709">coinbene.com</a>
+            <a target="_blank" href="https://list.kkcoin.com/coin/teleinvite?t=k73fc9s9kpmnrfht">kkcoin.com</a>   
+            <a target="_blank" href="https://big.one/">big.one</a>
+            <a target="_blank" href="http://u.cx/">u.cx</a>
 
+        </div>
     </div>
-</div>
-<div class="marquee">
-    <div class="container flex" style="background-color: #FFFAE9;max-width: 1400px;padding-left: 10px;justify-content: center;">
-        <span><img src="imgs/icon1.png" alt="" style="width: 16px;height:16px;"></span>
-        <p>
-        本平台严格审核承兑商进驻标准，每一位承兑商都经过精挑细选，对本行业有一定的专业认知且从业时间长、操作熟练，可为您提供：BitCNY/BitUSD和法币的互相兑换。</p>
-    </div> 
-</div>
-<div class="title1"><span></span>小二承兑认证商家<span></span></div>
-<div class="list flex container">
-    <div class="li">
-        <div class="name">小二极速快兑</div> 
-        <p class="recharge">充值：<span>0.5%</span>   提现：<span>0.5%</span></p>
-        <p class="number">笔数：<span>79笔</span>   好评：<span>98.6%</span></p>
-        <p class="recharge" style="margin-top: 20px">诚信快捷，网银打款秒到</p>
-        <div class="way">
-            <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=1724429306&site=qq&menu=yes">
-                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
-                <span>QQ交谈</span>
-            </a>
-            <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=1724429306&version=1&src_type=web&web_src=oicqzone.com">
-                <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
-                <span>QQ交谈</span>
-            </a>
+    <div class="marquee">
+        <div class="container flex" style="background-color: #FFFAE9;max-width: 1400px;padding-left: 10px;justify-content: center;">
+            <span><img src="imgs/icon1.png" alt="" style="width: 16px;height:16px;"></span>
+            <p>
+            本平台严格审核承兑商进驻标准，每一位承兑商都经过精挑细选，对本行业有一定的专业认知且从业时间长、操作熟练，可为您提供：BitCNY/BitUSD和法币的互相兑换。</p>
+        </div> 
+    </div>
+    <div class="title1"><span></span>小二承兑认证商家<span></span></div>
+    <div class="list flex container">
+        <div class="li">
+            <div class="name">小二极速快兑</div> 
+            <p class="recharge">充值：<span>0.5%</span>   提现：<span>0.5%</span></p>
+            <p class="number">笔数：<span>79笔</span>   好评：<span>98.6%</span></p>
+            <p class="recharge" style="margin-top: 20px">诚信快捷，网银打款秒到</p>
+            <div class="way">
+                <a target="_blank" class="qq pc" href="http://wpa.qq.com/msgrd?v=3&uin=1724429306&site=qq&menu=yes">
+                    <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                    <span>QQ交谈</span>
+                </a>
+                <a target="_blank" class="qq move" href="mqqwpa://im/chat?chat_type=wpa&uin=1724429306&version=1&src_type=web&web_src=oicqzone.com">
+                    <img border="0" src="imgs/qq.png" alt="在线咨" title="在线咨询"/>
+                    <span>QQ交谈</span>
+                </a>
           <!--   <div class="qq wx">
                 <img border="0" src="imgs/wx.png" alt="在线咨" title="在线咨询"/>
                 <span>微信交谈</span>
@@ -228,8 +232,8 @@
     })
     $('.close').each(function(i,e){
         $(this).click(function(){
-           $('.shadow').eq(i).hide()
-       })
+         $('.shadow').eq(i).hide()
+     })
     })
     isPc();
     function isPc(){
