--- a/小二承兑平台4/index.html
+++ b/小二承兑平台4/index.html
@@ -223,6 +223,10 @@
 <div class="footer">
     Copyright ©2018 小二承兑中心 All Rights Reserved
 </div>
+<div class="shadow">
+    <img src="imgs/arror.png" alt="" class="ico">
+    <p>戳右上角，选择在浏览器中打开即可开始承兑哦！</p>
+</div>
 </body>
 <script>
     $('.wx').each(function(i,e) {
