--- a/Candy365/index.html
+++ b/Candy365/index.html
@@ -61,7 +61,8 @@
     </div>
     <div class="shadow">
         <div class="box">
-            <img src="imgs/x.png" alt="" class="close">
+            <!-- <img src="imgs/x.png" alt="" class="close"> -->
+            <p class="close">X</p>
             <h2>一键加群</h2>
             <p class="con">加入本群获得最新最快的糖果分享活动及教程，为糖果党提供最好的交流环境！</p>
             <div>
