--- a/小二承兑平台4/index.html
+++ b/小二承兑平台4/index.html
@@ -229,6 +229,7 @@
 </div>
 </body>
 <script>
+    $('.shadow').hide()
     $('.wx').each(function(i,e) {
         $(this).click(function(){
             $('.shadow').eq(i).show()
@@ -239,12 +240,24 @@
          $('.shadow').eq(i).hide()
      })
     })
+
     isPc();
+    if(is_weixn()){
+        $('.shadow').show()
+    }
     function isPc(){
         if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent) || /(Android)/i.test(navigator.userAgent)) {
             $('.pc').hide()
         } else {
             $('.move').hide()
+        }
+    }
+    function is_weixn() {
+        var ua = navigator.userAgent.toLowerCase();
+        if (ua.match(/MicroMessenger/i) == "micromessenger") {
+            return true;
+        } else {
+            return false;
         }
     }
 </script>
