--- a/Candy365/index.html
+++ b/Candy365/index.html
@@ -81,7 +81,7 @@
     </div>
 </body>
 <script>
-$('.shadow').hide()
+// $('.shadow').hide()
 $('.title-item').each(function(i, e) {
     $(this).click(function() {
         $('.item-span').each(function() {
