--- a/Candy365/index.html
+++ b/Candy365/index.html
@@ -79,6 +79,16 @@
             </div>
         </div>
     </div>
+    <div class="wxtip">
+        <img src="imgs/weixin-tip.png" class="wxtip-icon">
+        <p class="wxtip-txt">
+            为了更好的浏览体验
+            <br/> 请选择在浏览器中打开
+        </p>
+        <img src="imgs/wx-logo.png" alt="" class="wx-logo">
+        <h2>Candy365.io</h2>
+        <h3>最快最多的糖果分享平台</h3>
+    </div>
 </body>
 <script>
 // $('.shadow').hide()
