--- a/Candy365/index.html
+++ b/Candy365/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>candy365.io-最好的糖果分享平台</title>
+    <title>candy365.io-中国第一糖果分享门户</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon" />
@@ -16,8 +16,8 @@
         <div class="header flex">
             <img src="imgs/logo.png" alt="" class="logo">
             <div class="flex" style='justify-content: space-between;width: 100%;'>
-                <span>最快最多的糖果分享平台</span>
-                <p class="btn go">一键加群</p>
+                <span>中国第一糖果分享门户</span>
+                <p class="btn go" id="jq">一键加群</p>
             </div>
         </div>
         <div class="candy-title flex">
@@ -25,7 +25,7 @@
                 <a class="item-span cur">全部</a>
             </div>
             <div class="title-item">
-                <a class="item-span">进行中</a>
+                <a class="item-span">最新上线<img src="imgs/new.png" alt="最新上线" style='width: 20px;height: 11px;margin-left: 2px;margin-bottom: 4px;'></a>
             </div>
             <div class="title-item">
                 <a class="item-span">已结束</a>
@@ -46,8 +46,8 @@
                 <div class="list-item-more">
                     <img src="imgs/demo.png" alt="">
                     <div>
-                        <p style='padding-right: 6px;'>SGC 1000注1000亿枚糖果大派送，注1000亿枚糖果大派送，注</p>
-                        <div class="flex" style='justify-content: space-between;padding-right: 20px;'>
+                        <p>SGC 1000注1000亿枚糖果大派送，注1000亿枚糖果大派送，注</p>
+                        <div class="flex" style='justify-content: space-between;'>
                             <p class="statue">进行中</p>
                             <p><span>1231</span>人参与</p>
                         </div>
@@ -87,7 +87,7 @@
         </p>
         <img src="imgs/wx-logo.png" alt="" class="wx-logo">
         <h2>Candy365.io</h2>
-        <h3>最快最多的糖果分享平台</h3>
+        <h3>中国第一糖果分享门户</h3>
     </div>
 </body>
 <script>
