--- a/Candy365/index.html
+++ b/Candy365/index.html
@@ -44,8 +44,10 @@
                 </div>
                 <!-- index > 3 -->
                 <div class="list-item-more">
-                    <img src="imgs/demo.png" alt="">
-                    <div>
+                    <div class="img">
+                        <img src="imgs/demo.png" alt="">
+                    </div>
+                    <div class="div">
                         <p>SGC 1000注1000亿枚糖果大派送，注1000亿枚糖果大派送，注</p>
                         <div class="flex" style='justify-content: space-between;'>
                             <p class="statue">进行中</p>
