--- a/Candy365/index.html
+++ b/Candy365/index.html
@@ -111,6 +111,18 @@ $('.go').click(function() {
 $('.close').click(function() {
     $('.shadow').hide()
 })
+if (is_weixn()) {
+    $('.wxtip').show()
+}
+
+function is_weixn() {
+    var ua = navigator.userAgent.toLowerCase();
+    if (ua.match(/MicroMessenger/i) == "micromessenger") {
+        return true;
+    } else {
+        return false;
+    }
+}
 </script>
 
 </html>
