--- a/Eagle 2FA/index.html
+++ b/Eagle 2FA/index.html
@@ -89,9 +89,9 @@
             为了更好的浏览体验
             <br/> 请选择在浏览器中打开
         </p>
-        <img src="imgs/wx-logo.png" alt="" class="wx-logo">
-        <h2>Candy365.io</h2>
-        <h3>中国第一糖果分享门户</h3>
+        <img src="imgs/logo.png" alt="" class="wx-logo">
+        <h2>Eagle 2FA</h2>
+        <h3>最好用的两次验证工具</h3>
     </div>
 </body>
 <script>
