--- a/Eagle 2FA/index.html
+++ b/Eagle 2FA/index.html
@@ -71,7 +71,9 @@
                     <p>批量导出私钥</p>
                     <p>一次生成，永不丢失</p>
                 </div>
-                <img src="imgs/3.png" alt="">
+                <div style='width: 190px;height: 306px'>
+                    <img src="imgs/3.png" alt="">
+                </div>
             </div>
         </div>
         <div class="con-item con-item4">
