--- a/Eagle 2FA/index.html
+++ b/Eagle 2FA/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container" style='margin-bottom: 40px'>
+    <div class="container">
         <div class="title">
             <div class="title-l">
                 <img src="imgs/logo.png" alt="">
@@ -31,24 +31,28 @@
             <span class="dian"></span>一键备份
         </div>
         <div class="btn-box">
-            <div class="btn" data-type='ios' id="btnIos">
-                <div class="btn-l">
-                    <p>前往App Store下载</p>
-                    <h2>IOS</h2>
+            <a href="https://itunes.apple.com/cn/app/id1300115032?mt=8" target="_blank">
+                <div class="btn" data-type='ios' id="btnIos">
+                    <div class="btn-l">
+                        <p>前往App Store下载</p>
+                        <h2>IOS</h2>
+                    </div>
+                    <div class="btn-r">
+                        <img src="imgs/IOS.png" alt="">
+                    </div>
                 </div>
-                <div class="btn-r">
-                    <img src="imgs/IOS.png" alt="">
+            </a>
+            <a href="#" target="_blank">
+                <div class="btn" data-type='andr' id="btnAndr">
+                    <div class="btn-l">
+                        <p>官方安装包下载</p>
+                        <h2>Android</h2>
+                    </div>
+                    <div class="btn-r">
+                        <img src="imgs/Android.png" alt="">
+                    </div>
                 </div>
-            </div>
-            <div class="btn" data-type='andr' id="btnAndr">
-                <div class="btn-l">
-                    <p>官方安装包下载</p>
-                    <h2>Android</h2>
-                </div>
-                <div class="btn-r">
-                    <img src="imgs/Android.png" alt="">
-                </div>
-            </div>
+            </a>
         </div>
         <div class="line"></div>
         <div class="con-list">
@@ -67,7 +71,7 @@
                 </div>
             </div>
             <div class="con-item con-item3">
-                <div>
+                <div style='margin-bottom: 80px;'>
                     <p>批量导出私钥</p>
                     <p>一次生成，永不丢失</p>
                 </div>
@@ -81,8 +85,10 @@
                 <p>可与多个提供商搭配使用</p>
                 <p>多帐号，多设备</p>
             </div>
-            <img src="imgs/3.png" alt="">
-            <span>扫码立即下载</span>
+            <img src="imgs/4.png" alt="">
+        </div>
+        <div class="footer">
+            Copyright ©2018 Eagle 2FA All Rights Reserved
         </div>
     </div>
     <div class="wxtip">
