--- a/Eagle 2FA/index.html
+++ b/Eagle 2FA/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="sub">
-            两步验证码轻松生成，账户安全性永久提高
+            两步验证码快速生成，账户安全性永久提高
         </div>
         <div class="sub" style='margin-top: 17px'>
             <span class="dian"></span>无需联网
@@ -50,7 +50,7 @@
                                 <img src="imgs/googleplay.png" alt="">
                             </div>
                             <div class="btn-l">
-                                <p>Google Play</p>
+                                <p style='font-size: 14px'>Google Play</p>
                             </div>
                         </div>
                     </a>
@@ -60,7 +60,7 @@
                                 <img src="imgs/down.png" alt="">
                             </div>
                             <div class="btn-l">
-                                <p>直接下载</p>
+                                <p style='font-size: 14px'>直接下载</p>
                             </div>
                         </div>
                     </a>
@@ -89,13 +89,13 @@
                 <img src="imgs/2.png" alt="">
                 <div>
                     <p>双重输入方式</p>
-                    <p>支持人工快捷扫码</p>
+                    <p>快捷扫码、手动输入</p>
                 </div>
             </div>
             <div class="con-item con-item3">
                 <div style='margin-bottom: 80px;'>
                     <p>批量导出私钥</p>
-                    <p>一次生成，永不丢失</p>
+                    <p>一键备份，永不丢失</p>
                 </div>
                 <div style='width: 190px;height: 306px'>
                     <img src="imgs/3.png" alt="">
