--- a/Candy365/index.html
+++ b/Candy365/index.html
@@ -38,8 +38,10 @@
                     <img src="imgs/demo.png" alt="">
                     <p>超级柚 supre Eos 1000亿枚糖果大派送</p>
                     <div>
+                        <div class="star-div">
+                            <img src="imgs/star1.png" alt="">
+                        </div>
                         <p class="statue">进行中</p>
-                        <p><span>1231</span>人参与</p>
                     </div>
                 </div>
                 <!-- index > 3 -->
@@ -51,7 +53,7 @@
                         <p>SGC 1000注1000亿枚糖果大派送，注1000亿枚糖果大派送，注</p>
                         <div class="flex" style='justify-content: space-between;'>
                             <p class="statue">进行中</p>
-                            <p><span>1231</span>人参与</p>
+                           <!--  <p><span>1231</span>人参与</p> -->
                         </div>
                     </div>
                 </div>
