--- a/Candy365/index.html
+++ b/Candy365/index.html
@@ -44,6 +44,16 @@
                         <p class="statue">进行中</p>
                     </div>
                 </div>
+                <div class="list-item">
+                    <img src="imgs/demo.png" alt="">
+                    <p>超级柚 supre Eos 1000亿枚糖果大派送超级柚 supre Eos 1000亿枚糖果大派送超级柚 supre Eos 1000亿枚糖果大派送</p>
+                    <div>
+                        <div class="star-div">
+                            <img src="imgs/star1.png" alt="">
+                        </div>
+                        <p class="statue">进行中</p>
+                    </div>
+                </div>
                 <!-- index > 3 -->
                 <div class="list-item-more">
                     <div class="img">
