--- a/Eagle 2FA/index.html
+++ b/Eagle 2FA/index.html
@@ -133,6 +133,11 @@
         <h2>Eagle 2FA</h2>
         <h3>最好用的两次验证工具</h3>
     </div>
+    <div class="code">
+        <div class="container">
+            <img src="imgs/code.png" alt="">
+        </div>
+    </div>
 </body>
 <script>
 $('#andr').click(function() {
