--- a/Eagle 2FA/index.html
+++ b/Eagle 2FA/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Eagle 2FA 最好用的两次验证工具</title>
+    <title>Eagle 2FA 最好用的二次验证工具</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon" />
@@ -19,16 +19,16 @@
             </div>
             <div class="title-r">
                 <h2>Eagle 2FA</h2>
-                <p>最好用的两次验证工具</p>
+                <p>最好用的二次验证工具</p>
             </div>
         </div>
         <div class="sub">
-            两步验证码快速生成，账户安全性永久提高
+            二次验证码快速添加，账户安全性双重提升
         </div>
         <div class="sub" style='margin-top: 17px'>
             <span class="dian"></span>无需联网
-            <span class="dian"></span>快速导出
-            <span class="dian"></span>一键备份
+            <span class="dian"></span>批量导出
+            <span class="dian"></span>安全锁
         </div>
         <div class="btn-box">
             <a href="https://itunes.apple.com/cn/app/id1300115032?mt=8" target="_blank">
@@ -90,22 +90,22 @@
         <div class="con-list">
             <div class="con-item con-item1">
                 <div>
-                    <p>多个验证码，单屏管理</p>
-                    <p>专业、高效、清晰</p>
+                    <p>多验证码管理</p>
+                    <p>支持拖动排序、左滑管理</p>
                 </div>
                 <img src="imgs/1.png" alt="">
             </div>
             <div class="con-item con-item2">
                 <img src="imgs/2.png" alt="">
                 <div>
-                    <p>双重输入方式</p>
-                    <p>快捷扫码、手动输入</p>
+                    <p>导出备份</p>
+                    <p>批量导出，本地备份</p>
                 </div>
             </div>
             <div class="con-item con-item3">
                 <div style='margin-bottom: 80px;'>
-                    <p>批量导出私钥</p>
-                    <p>一键备份，永不丢失</p>
+                    <p>开启安全锁</p>
+                    <p>更安全地保护您的账户信息</p>
                 </div>
                 <div style='width: 190px;height: 306px'>
                     <img src="imgs/3.png" alt="">
